src/test/deca/context/invalid/decaObjet/fields/02doubleDecl.deca
// Description:
//    double déclaration d'un champs de même nom
//
// Resultats:
//    02doubleDecl.deca:12:10:
//
// Historique:
//    cree le 16/06/2022

class A {
    int x;
    float x;
}